Initial implementation of schedule base endpoints
