# src/schedules/dto/generate-schedule.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class GenerateScheduleDto {
+  @IsNotEmpty()
+  @IsString()
+  semesterId: string;
+}
