# src/schedules/dto/schedule.dto.ts
@@ -1,0 +1,10 @@
+import { EventDto } from './event.dto';
+
+export class ScheduleDto {
+  id: string;
+  name: string;
+  ownerId: string;
+  semesterId: string;
+  semesterTitle: string;
+  events: EventDto[];
+}
